--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,13 @@
 <resources>
-
+    <string name="app_name">AlertaBlumenau</string>
+    <array name="ruas">
+        <item>Rua A</item>
+        <item>Rua B</item>
+        <item>Rua C</item>
+        <item>Rua D</item>
+    </array>
     <string name="parse_app_id">YOUR_APPLICATION_ID</string>
     <string name="parse_client_key">YOUR_CLIENT_KEY</string>
-    <string name="app_name">AlertaBuraco</string>
     <string name="title_activity_maps">Map</string>
     <string name="action_configuracoes">Configurações</string>
     <string name="action_sair">Sair</string>
@@ -16,10 +21,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_feed_usuarios">FeedUsuariosActivity</string>
-
-
-    <!-- TODO: Remove or change this placeholder text -->
-
     <string name="digite_seu_nome">Digite seu Nome</string>
     <string name="digite_sua_senha">Digite sua senha</string>
     <string name="digite_seu_nome2">Digite seu nome</string>
